--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ main li a {
     line-height: 24px;
 }
 
-.education h3 {
+.education h3, .experience h3  {
     color: #000;
     font-size: 16px;
     font-weight: 900;
@@ -115,19 +115,7 @@ main li a {
     font-weight: 700;
 }
 
-.education p {
-    color: #A8A8A8;
-    font-size: 12px;
-    font-weight: 400;
-}
-
-.experience h3 {
-    color: #000;
-    font-size: 16px;
-    font-weight: 900;
-}
-
-.experience p{
+.education p, .experience p{
     color: #A8A8A8;
     font-size: 12px;
     font-weight: 400;
