--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 aside {
-    background: #023238;
+    background: #182a54;
     width: 370px;
     font-style: normal;
     color: #FFF;
